# allfeat-explorer

./: .dockerignore  .gitignore  .release-please-manifest.json  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  build.rs  deny.toml  docker-compose.yml  flake.nix  mprocs.live.yaml  mprocs.prod.yaml  mprocs.yaml  package.json  release-please-config.json
.github/workflows/: ci.yml  images.yml  release-please.yml
artifacts/: allfeat-metadata.scale  melodie-metadata.scale
bindings/: Account.ts  AccountAtsFilters.ts  Allocation.ts  AtsFeedFilters.ts  AtsFeedItem.ts  AtsFilters.ts  AtsRecord.ts  AtsStats.ts  AtsVersion.ts  Balance.ts  Block.ts  BlockEvent.ts  BlockFilters.ts  BuildInfo.ts  CallField.ts  CallResult.ts  Deposit.ts  EnvelopeDetail.ts  EnvelopeId.ts  EnvelopeInfo.ts  EpochInfo.ts  EventField.ts  EventFilters.ts  EventPhase.ts  EventRef.ts  Extrinsic.ts  ExtrinsicArgs.ts  ExtrinsicFilters.ts  IndexerState.ts  IndexerStatus.ts  NetworkSpec.ts  Page.ts  PageInfo.ts  PageRequest.ts  RuntimeCodeInfo.ts  RuntimeDetails.ts  RuntimeIdentity.ts  RuntimeUpgrade.ts  TokenOverview.ts  Transfer.ts  (+4 more)
deploy/: README.md
deploy/docker/: Dockerfile.backend  Dockerfile.web
docs/: api-pagination-plan.md  code-quality-plan.md  deployment.md  frontend-v2-plan.md  indexing-plan.md  js-frontend-rewrite-plan.md  ops.md  security-plan.md
end2end/: playwright.config.ts  pnpm-lock.yaml
end2end/tests/: _extrinsics-events-toggle.spec.ts  _waveform-debug.spec.ts  baseline.spec.ts  hydration.spec.ts  live.spec.ts
migrations/: 001_initial.sql  002_ats_event_fields.sql  003_block_weights.sql  004_schema_rework.sql  005_hot_path_partial_indexes.sql  006_blocks_spec_version_idx.sql
src/: domain.rs  lib.rs  main.rs  network.rs  serde_helpers.rs
src/data/: cursor.rs  error.rs  filters.rs  metadata.rs  mock.rs  mod.rs  provider.rs  ss58.rs
src/data/indexed/: mod.rs  provider.rs
src/data/indexed/queries/: accounts.rs  ats.rs  blocks.rs  events.rs  extrinsics.rs  mod.rs  runtime.rs  transfers.rs
src/data/rpc/: cache.rs  client.rs  mod.rs  provider.rs  runtime.rs
src/data/rpc/mappers/: accounts.rs  ats.rs  blocks.rs  common.rs  extrinsics.rs  mod.rs  token.rs  transfers.rs
src/indexer/: backfill.rs  buffer.rs  live.rs  lookups.rs  metadata.rs  mod.rs  reconcile.rs  sink.rs
src/indexer/projections/: accounts.rs  ats.rs  balances.rs  blocks.rs  events.rs  extrinsics.rs  genesis.rs  mod.rs
src/live/: encoder.rs  merge.rs  mod.rs  protocol.rs  server.rs
src/mock/: data.rs  mod.rs  rng.rs
src/server/: config.rs  db.rs  health.rs  metrics.rs  mod.rs  state.rs
src/server/api/: accounts.rs  ats.rs  blocks.rs  cache_control.rs  error.rs  extrinsics.rs  indexing.rs  meta.rs  metadata.rs  mod.rs  networks.rs  runtime.rs  token.rs
style/: main.scss
tests/: accounts.rs  ats.rs  backfill.rs  banner.rs  extrinsics.rs  indexer_live.rs  metrics.rs  migrations.rs  ops.rs  readyz.rs  rpc_integration.rs  transfers.rs
tests/common/: mod.rs
web/: CHANGELOG.md  nuxt.config.ts  package.json
web/app/: error.vue
web/app/assets/styles/: _layout.scss  _reset.scss  _tokens.scss  _typography.scss  main.scss
web/app/assets/styles/components/: _breadcrumb.scss  _btn.scss  _chip.scss  _connection-pill.scss  _footer.scss  _hash.scss  _header.scss  _hero.scss  _identicon.scss  _kv.scss  _pagination.scss  _panel.scss  _pill.scss  _search.scss  _seg.scss  _skeleton.scss  _stat.scss  _table.scss  _tabs.scss
web/app/components/dashboard/: AtsPromoPanel.vue  LatestAtsPanel.vue  LatestBlocksPanel.vue  LatestExtrinsicsPanel.vue
web/app/components/detail/: AccountDetail.vue  AtsDetail.vue  BlockDetail.vue  ExtrinsicDetail.vue  InactiveAccountDetail.vue
web/app/components/detail/ats/: AtsOverviewTab.vue  AtsTechnicalTab.vue  AtsVersionsTab.vue
web/app/components/hero/: HeroLiveCard.vue  WaveformHero.vue
web/app/components/layout/: AppFooter.vue  AppHeader.vue  BrandLogo.vue  Breadcrumb.vue  FooterHeadChip.vue  IndexingBanner.vue  MobileDrawer.vue  NavIcon.vue  NetworkSwitch.vue  SearchBar.vue  ThemeSwitch.vue
web/app/components/live/: ConnectionIndicator.vue  LiveDot.vue
web/app/components/runtime/: RuntimeAtToolbar.vue  RuntimeUpgradeTimeline.vue
web/app/components/tables/: AccountsTable.vue  AtsTimeline.vue  BlocksTable.vue  EventsTable.vue  ExtrinsicsTable.vue
web/app/components/token/: AccountAllocationsPanel.vue  EnvelopeAllocationsTable.vue  EnvelopeCard.vue  EnvelopeIcon.vue  SupplyBreakdownBar.vue  TokenEmissionChart.vue  TokenSupplyStrip.vue
web/app/components/ui/: Addr.vue  AddressFormatToggle.vue  AtsBadge.vue  AtsProtectCta.vue  AtsStatsStrip.vue  AtsWave.vue  BalanceDonut.vue  Chip.vue  CopyButton.vue  FilterSegment.vue  Hash.vue  Identicon.vue  Kv.vue  KvRow.vue  NotFoundPanel.vue  Pagination.vue  Pill.vue  SkeletonRows.vue  StatusPill.vue  Tabs.vue  TimeAgo.vue
web/app/composables/: useActiveNetwork.ts  useApi.ts  useBuildInfo.ts  useConnectionState.ts  useKnownAccount.ts  useLiveAtsFeed.ts  useLiveBlocks.ts  useLiveEvents.ts  useLiveExtrinsics.ts  useLiveSeed.ts  useLiveSocket.ts  useLiveWaveform.ts  useNetworkFetch.ts  useNetworkLink.ts  usePaginatedList.ts  usePallets.ts  useRuntimeDetails.ts  useRuntimeUpgrades.ts  useSearch.ts  useWallClock.ts
web/app/layouts/: default.vue
web/app/middleware/: network.global.ts
web/app/pages/: index.vue
web/app/pages/accounts/: [address].vue  index.vue
web/app/pages/ats/: [id].vue  index.vue
web/app/pages/blocks/: [number].vue  index.vue
web/app/pages/events/: index.vue
web/app/pages/extrinsics/: [id].vue  index.vue
web/app/pages/runtime/: index.vue
web/app/pages/token/: index.vue
web/app/pages/token/envelopes/: [id].vue
web/app/plugins/: live.client.ts  networks.server.ts
web/app/stores/: live.ts  networks.ts
web/app/types/: live.ts  nav.ts
web/app/utils/: blocks.ts  envelopes.ts  format.ts  identicon.ts  knownAccounts.ts  mockSs58.ts  pagination.ts  searchPatterns.ts  ss58.ts  time.ts  tokenSchedule.ts
